--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
             <version>2.5.2</version>
             <scope>provided</scope>
         </dependency>
+     <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.6</version>
+</dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
